# PythonHomeTask-Aganitha

./: README.md  cli.py  covid.csv  pyproject.toml  result.csv
get_papers/: parser.py  pubmed.py  writer.py
