[tool.poetry]
name = "get-papers-pubmed"
version = "0.1.0"
description = "Fetch PubMed papers with authors from pharma/biotech companies"
authors = ["AATHIOBUSRE <aathiobusre@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AATHIOBUSRE/PythonHomeTask-Aganitha"
repository = "https://github.com/AATHIOBUSRE/PythonHomeTask-Aganitha"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.83"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[[tool.poetry.packages]]
include = "get_papers"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
